--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
 	<div id="log"></div>
-	<input type="text" name="input" id="tinput">
+	<input autocomplete="off" type="text" name="input" id="tinput">
 </body>
 </html>
