--- a/video.html
+++ b/video.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 
-	<video width="320" height="240" controls>
-		<source src="video.mp4" type="video/mp4">
+	<video width="620" height="480" controls>
+		<source src="security.mov" type="video/mp4">
 		Your browser does not support the video tag.
 	</video>`
 </body>
